# cloudflare-pyworker-dyndns2

./: .gitignore  README.md  SPEC.md  pyproject.toml  wrangler.toml
scripts/: trim_python_modules.sh
src/: main.py
tools/: generate_auth_json.py  hash_password.py
